recaptcha Test et Update projects data
