# BackEnd/src/Entity/Review.php
@@ -29,30 +29,45 @@ class Review
         $this->createdAt = new \DateTime();
     }
 
-    public function getId(): ?int { return $this->id; }
+    public function getId(): ?int
+    {
+        return $this->id;
+    }
 
-    public function getAuthor(): string { return $this->author; }
-     // Retour avec echappement des entrées html
-    public function setAuthor(string $author): self 
-    { 
-        $this->author = htmlspecialchars($author, ENT_QUOTES, 'UTF-8');
+    public function getAuthor(): string
+    {
+        return $this->author;
+    }
+    // Retour avec echappement des entrées html en gardant les quotes
+    public function setAuthor(string $author): self
+    {
+        $this->author = htmlspecialchars($author, ENT_NOQUOTES, 'UTF-8');
         return $this;
     }
 
-    public function getScore(): int { return $this->score; }
-    public function setScore(int $score): self 
-    { 
+    public function getScore(): int
+    {
+        return $this->score;
+    }
+    public function setScore(int $score): self
+    {
         $this->score = $score;
         return $this;
     }
 
-    public function getContent(): string { return $this->content; }
+    public function getContent(): string
+    {
+        return $this->content;
+    }
     // Retour avec echappement des entrées html
-    public function setContent(string $content): self 
-    { 
-        $this->content = htmlspecialchars($content, ENT_QUOTES, 'UTF-8');
+    public function setContent(string $content): self
+    {
+        $this->content = htmlspecialchars($content, ENT_NOQUOTES, 'UTF-8');
         return $this;
     }
 
-    public function getCreatedAt(): \DateTimeInterface { return $this->createdAt; }
+    public function getCreatedAt(): \DateTimeInterface
+    {
+        return $this->createdAt;
+    }
 }
